@@ -1,0 +1,7 @@
+Tools to run system processes in the background. It can check if a
+background process is running; wait on a background process to finish;
+get the exit status of finished processes; kill background processes.
+It can read the standard output and error of the processes, using
+non-blocking connections. 'processx' can poll a process for standard
+output or error, with a timeout. It can also poll several processes at
+once.
