@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 19:03:18 brook Exp $
+
+R_PKGNAME=	processx
+R_PKGVER=	3.4.1
+CATEGORIES=	sysutils
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Execute and control system processes
+LICENSE=	mit
+
+DEPENDS+=	R-ps>=1.2.0:../../sysutils/R-ps
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
