@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 19:03:18 brook Exp $
+
+SHA1 (R/processx_3.4.1.tar.gz) = 4728b0ac981c8f25f6cdb4fa21487bf4796e6ca0
+RMD160 (R/processx_3.4.1.tar.gz) = 25db2dbcaa85384b0083faad41f9452654a7220a
+SHA512 (R/processx_3.4.1.tar.gz) = 28c0cbab94a4c59ccc827f7e6458d497ef6119e9ef9471713bde357bbca246369d2f2944b16754ff971937efa302d464b1931a8e7a20631665dde761f63375c7
+Size (R/processx_3.4.1.tar.gz) = 123430 bytes
