@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3358 2019/08/09 19:02:20 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3359 2019/08/09 19:03:17 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5481,3 +5481,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added devel/R-testthat version 2.2.1 [brook 2019-08-09]
 	Added devel/R-desc version 1.2.0 [brook 2019-08-09]
 	Added security/R-askpass version 1.1 [brook 2019-08-09]
+	Added sysutils/R-processx version 3.4.1 [brook 2019-08-09]
